crates/wolf_parse/tests/snapshots/diagnostics__e0201_group_bare_tuple.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0201,
    severity: Error,
    message: "this name has no value — `let a, b = 1, 2` (the bare tuple) is not wolf",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 5,
            hi: 6,
        },
        label: "its `=` and value belong before this comma",
    },
    secondary: [],
    notes: [
        "a comma groups complete bindings, each with its own `=`: `let a = 1, b = 2`. To unpack one value into several names, destructure with parens on both sides: `let (a, b) = (1, 2)`.",
    ],
    suggestions: [],
}
