crates/wolf_parse/tests/snapshots/diagnostics__e0201_group_uninitialized.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0201,
    severity: Error,
    message: "this binding has no value — expected `=` and an initializer",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 5,
            hi: 6,
        },
        label: "",
    },
    secondary: [
        LabeledSpan {
            span: Span {
                file: FileId(
                    0,
                ),
                lo: 8,
                hi: 9,
            },
            label: "nor has this one",
        },
    ],
    notes: [],
    suggestions: [],
}
