crates/wolf_parse/tests/snapshots/diagnostics__e0201_if_let_in_bare_branch.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0201,
    severity: Error,
    message: "a bare `then` branch holds one expression — a `let` needs the braced form",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 37,
            hi: 40,
        },
        label: "",
    },
    secondary: [],
    notes: [
        "an `if` is written `if c { a } else { b }`, or on one line `if c then a else b` — braces or `then`, never neither, and both branches the same way ([gram.expr.if])",
    ],
    suggestions: [],
}
