crates/wolf_parse/tests/snapshots/diagnostics__e0201_literal_fields_need_comma.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0201,
    severity: Error,
    message: "expected `,` between the struct literal's fields",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 30,
            hi: 31,
        },
        label: "",
    },
    secondary: [],
    notes: [
        "the separating comma is required between field initializers ([gram.expr.primary]: struct_lit ::= path '{' (field_init (',' field_init)* ','?)? '}')",
    ],
    suggestions: [
        Suggestion {
            message: "add the comma",
            edits: [
                (
                    Span {
                        file: FileId(
                            0,
                        ),
                        lo: 29,
                        hi: 29,
                    },
                    ",",
                ),
            ],
            applicability: MachineApplicable,
        },
    ],
}
