crates/wolf_parse/tests/snapshots/diagnostics__e0201_missing_name.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0201,
    severity: Error,
    message: "expected a function name",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 3,
            hi: 4,
        },
        label: "",
    },
    secondary: [],
    notes: [],
    suggestions: [],
}
