crates/wolf_parse/tests/snapshots/diagnostics__e0201_range_pat_open_high.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0201,
    severity: Error,
    message: "expected a literal to close the range pattern",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 49,
            hi: 51,
        },
        label: "",
    },
    secondary: [],
    notes: [
        "a range pattern is `lo..hi` or `lo..=hi` with a literal at both ends (integer or `char`); the open ranges `..hi` and `lo..` are slice spellings, not patterns ([gram.pat.range])",
    ],
    suggestions: [],
}
